Split parser and reader